<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearance"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0FFFF">

        <TextView
            android:id="@+id/novoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/novo_gasto"
            android:onClick="selecionarOpcao"
            android:text="@string/novoGasto"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/novaViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/novoGasto"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:onClick="selecionarOpcao"
            android:text="@string/novaViagem"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/minhasViagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/minhas_viagens"
            android:onClick="selecionarOpcao"
            android:text="@string/minhasViagens"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_below="@+id/novoGasto"
            android:layout_alignStart="@+id/novoGasto"
            android:layout_marginTop="106dp" />

        <TextView
            android:id="@+id/configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/minhasViagens"
            android:layout_alignRight="@id/novaViagem"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:drawableTop="@drawable/configuracoes"
            android:text="@string/configuracoes"
            android:textColor="#000000"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>